--- a/sass/layouts/_professionalSummary.scss
+++ b/sass/layouts/_professionalSummary.scss
@@ -101,7 +101,7 @@
 
       .modal {
         max-width: 330px;
-        left: 3%;
+        left: 5%;
 
         .modal-dialog .modal-content .modal-body {
           padding: 0 1rem;
