--- a/sass/layouts/_profile.scss
+++ b/sass/layouts/_profile.scss
@@ -125,18 +125,24 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%, 0 100%);
     padding-bottom: 1.5rem;
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 
-    .left h2 {
-      font-size: 1.4rem;
-      // font-weight: 100;
-    }
+    .left {
+      line-height: 1.8rem;
+      margin-left: 2rem;
 
-    .left p {
-      font-size: 1.1rem;
-    }
-
-    .left p b {
-      font-weight: 100;
+      .nameSrn {
+        margin-top: 1rem;
+        line-height: 0.8;
+        h2 {
+          font-size: 1.8rem;
+        }
+        p {
+          font-size: 1.4rem;
+        }
+      }
     }
 
     .left img {
@@ -171,11 +177,13 @@
     .right ul.contact {
       list-style-type: none;
       margin-bottom: 1.6rem;
+      margin-left: 2rem;
     }
 
     .right ul.contact li {
-      margin-top: 0.7rem;
-      font-size: 0.5rem;
+      margin-top: 1rem;
+      font-size: 1.2rem;
+      line-height: 1;
     }
 
     .right ul.contact li strong {
