--- a/sass/layouts/_timeline.scss
+++ b/sass/layouts/_timeline.scss
@@ -206,7 +206,7 @@
 
       .modal {
         max-width: 330px;
-        left: 3%;
+        left: 5%;
 
         .modal-dialog {
           .modal-content {
